# neon

./: .clang-format  .gitignore  CMakeLists.txt  RunClangFormat.sh  example.ne  hello_world  helper.asm  test.ll  test.py
.github/: dependabot.yml
.github/workflows/: actions.yml
crashes/: crash1.ne
examples/: cat.ne
lib/: File.ne  Malloc.ne  Prelude.ne  Standard.ne  Syscalls.ne
src/: AST.cpp  AST.h  Context.cpp  Context.h  Enums.cpp  Enums.h  Error.cpp  Error.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Preprocess.cpp  Preprocessor.cpp  Preprocessor.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  Type.cpp  Type.h  TypeCasts.h  Utils.cpp  Utils.h  main.cpp
src/AST/: Codegen.cpp  DCE.cpp  Dump.cpp  EvaluateAsConstant.cpp  GetType.cpp  Typecheck.cpp
tests/: args.ne  args.txt  arguments.ne  array.ne  assignment_as_expression.ne  bool.ne  constants.ne  constants.txt  global_constants.ne  global_variable.ne  global_variable_without_default_value.ne  hello_world.ne  hello_world.txt  if_statement.ne  if_statement.txt  math1.txt  math2.txt  number_bases.ne  operation_precedence_over_assignment.ne  operation_precedence_over_assignment.txt  pointers.ne  return.ne  return.txt  struct.ne  struct.txt  while_loop.ne  while_loop.txt
tests/comments/: comments.ne  line_comment_at_the_end.ne  unterminated_block_comment.ne
tests/errors/: ascii_control_character_in_string_literal.ne  invalid_assignment.ne  invalid_call_args.ne  invalid_cast.ne  invalid_derefrence.ne  invalid_initial_assignment.ne  invalid_main_args.ne  invalid_main_return_type.ne  no_comma_between_args.ne  no_main_function.ne  no_return.ne  no_return_empty_function.ne  unfinished_number_with_different_base.ne  unknown_function.ne  unterminated_string.ne  wrong_arg_count.ne
tests/functions/: return.txt  return_int_as_ptr_casted.ne  return_int_as_ptr_casted.txt  return_void.ne
vscode/: CHANGELOG.md  LICENSE  README.md  neon-language-0.0.1.vsix  package.json  test.cpp  vsc-extension-quickstart.md
(+24 files in other folders)
